[tool.poetry]
name = "pydisadm"
version = "2.1.3"
description = "A Discord bot providing ADM summaries."
repository = "https://github.com/agelito/adm-bot"
authors = ["Axel Wettervik"]
license = "MIT"
readme = "README.md"
include = ["data/*.csv"]

[tool.poetry.dependencies]
python = "^3.8"
schedule = "^1.2.0"
requests = "^2.30.0"
discord = "^2.2.3"
python-dotenv = "^1.0.0"
pandas = "^2.0.1"
tabulate = "^0.9.0"
matplotlib = "^3.7.1"
sqlalchemy = "^2.0.19"
mysqlclient = "^2.2.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
python-semantic-release = "^7.33.4"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "pyproject.toml:version"
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = "poetry build"
dist_path = "dist/"
upload_to_release = true
upload_to_pypi = false
remove_dist = false 
patch_without_tag = true